# vaayu

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  package.json
.github/workflows/: ci.yml
examples/static_server/: BUILD.bazel  main.c
examples/static_server/www/: BUILD.bazel  data.json  index.html  script.js  styles.css  test.txt
examples/static_server/www/subdir/: nested.html
internal/compiler/: compiler.go  jsruntime.go  parser.go
internal/devserver/: server.go  watcher.go
internal/vite/: manifest.go  vite.go
lib/http/: BUILD.bazel
lib/http/include/: tinyhttp.h  vaayu_http.h
lib/http/src/: http_mime.c  http_server.c  http_util.c  tinyhttp.c
site/: index.vyu  install.sh  main.ts  styles.css
tests/smoke/: BUILD.bazel  test_smoke.sh
vite/: package.json  tsconfig.json  vite.config.ts
vite/src/: placeholder.ts
