load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "http",
    srcs = [
        "src/http_server.c",
        "src/http_mime.c", 
        "src/http_util.c",
    ],
    hdrs = ["include/vaayu_http.h"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    copts = ["-O2", "-Wall", "-Wextra", "-pedantic", "-Werror", "-std=c99"],
)
